edit機能を追加

--- a/money/templates/money/index.html
+++ b/money/templates/money/index.html
@@ -50,6 +50,7 @@
                 <td>{{ m.detail }}</td>
                 <td>{{ m.category }}</td>
                 <td>{{ m.amount }}円</td>
+                <td><a href="{%  url 'money:edit' m.id %}">Edit</a></td>
               </tr>
               {% endfor %}
             </table>
